--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -9,3 +9,9 @@
 @import "components/scroll";
 @import "components/header";
 @import "components/hero";
+@import "components/category";
+@import "components/products";
+@import "components/newsletter";
+
+// Pages
+@import "pages/login&signup.scss";
