--- a/client/src/Sass/mixins/_mixins.scss
+++ b/client/src/Sass/mixins/_mixins.scss
@@ -102,3 +102,22 @@
     font-size: 0.75rem; /* --> 12px */
   }
 }
+
+// header shadow
+@mixin header-shadow($y) {
+  box-shadow: 0px $y 50px 5px $gray;
+  -webkit-box-shadow: 0px $y 50px 5px $gray;
+  -moz-box-shadow: 0px $y 50px 5px $gray;
+}
+
+// button shadow
+@mixin shadow-btn() {
+  box-shadow: 0px 25px 50px -12px $gray;
+  -webkit-box-shadow: 0px 25px 50px -12px $gray;
+  -moz-box-shadow: 0px 25px 50px -12px $gray;
+}
+
+// transition
+@mixin transition($ms) {
+  transition: ease-in-out all $ms;
+}
