--- a/client/src/Sass/base/_base.scss
+++ b/client/src/Sass/base/_base.scss
@@ -10,8 +10,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  @include body-margin;
-  // margin: 0;
+  @include body-margin(plus);
   padding: 0;
   overflow: overlay;
   font-family: $poppins;
@@ -34,7 +33,8 @@ a {
   text-decoration: none;
 }
 button,
-input {
+input,
+textarea {
   border: none;
   outline: none;
   font-family: $poppins;
