--- a/client/src/Sass/config/_variables.scss
+++ b/client/src/Sass/config/_variables.scss
@@ -19,7 +19,7 @@ $dark: hsl(0, 0%, 0%);
 $dark-alt: hsl(228, 4%, 25%);
 $cyan: hsla(187, 94%, 39%, 0.993);
 $cyan-alt: hsl(206, 59%, 89%);
-$red: hsl(0, 100%, 50%);
+$red: hsla(1, 82%, 49%, 0.918);
 $green: hsl(120, 94%, 34%);
 
 /******* Font Family ***/
