--- a/client/src/Sass/mixins/_mixins.scss
+++ b/client/src/Sass/mixins/_mixins.scss
@@ -15,10 +15,17 @@
 }
 
 // body margin
-@mixin body-margin() {
-  margin: 3.5rem 0 0 0;
-  @include breakpoint(md) {
-    margin: 4rem 0 0 0;
+@mixin body-margin($value) {
+  @if ($value == plus) {
+    margin: 3.5rem 0 3.5rem 0;
+    @include breakpoint(md) {
+      margin: 4rem 0 0 0;
+    }
+  } @else if ($value == minus) {
+    margin: -3.5rem 0 -3.5rem 0;
+    @include breakpoint(md) {
+      margin: -4rem 0 0 0;
+    }
   }
 }
 
@@ -115,6 +122,13 @@
   box-shadow: 0px 25px 50px -12px $gray;
   -webkit-box-shadow: 0px 25px 50px -12px $gray;
   -moz-box-shadow: 0px 25px 50px -12px $gray;
+}
+
+// box shadow
+@mixin box-shadow() {
+  box-shadow: 0px 25px 400px -20px $gray;
+  -webkit-box-shadow: 0px 25px 400px -20px $gray;
+  -moz-box-shadow: 0px 25px 400px -20px $gray;
 }
 
 // transition
