--- a/client/src/Sass/components/_header.scss
+++ b/client/src/Sass/components/_header.scss
@@ -108,6 +108,7 @@
         gap: 0.5rem;
         align-items: center;
         .nav__item2 {
+          position: relative;
           .MuiIconButton-root {
             .MuiSvgIcon-root {
               @include h2-font;
@@ -127,6 +128,47 @@
             font-weight: $semi-bold;
             @include small-font;
             @include transition(200ms);
+          }
+          .dropdown__menu {
+            position: absolute;
+            right: 0.3rem;
+            top: 3.2rem;
+            display: none;
+            .dropdown__list {
+              background-color: $white;
+              padding: $x-0-75;
+              display: flex;
+              flex-direction: column;
+              gap: 0.5rem;
+              .dropdown__item {
+                .dropdown__link {
+                  border: 1px solid $white;
+                  color: $dark-alt;
+                  font-weight: $medium;
+                  @include small-font;
+                  padding: $x-0-5;
+                  display: flex;
+                  align-items: center;
+                  gap: 0.5rem;
+                  width: 10rem;
+                  text-align: center;
+                  @include transition(200ms);
+                  &:hover {
+                    color: $cyan;
+                    border: 1px solid $white-alt;
+                  }
+                  .MuiSvgIcon-root {
+                    @include h2-font;
+                    @include breakpoint(md) {
+                      @include h3-font;
+                    }
+                  }
+                }
+              }
+            }
+          }
+          .dropdown__show {
+            display: block;
           }
         }
       }
