--- a/client/src/Sass/config/_variables.scss
+++ b/client/src/Sass/config/_variables.scss
@@ -1,5 +1,5 @@
 /*********** Google Font ***/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 @import "../mixins/breakpoints";
 /*********** Sass Variables ***/
 /******* Colors ***/
@@ -24,6 +24,7 @@ $green: hsl(120, 94%, 34%);
 
 /******* Font Family ***/
 $poppins: "Poppins", sans-serif;
+$dancing: "Dancing Script", cursive;
 
 /******* Font Weight ***/
 $light: 300;
