--- a/client/src/Sass/layout/_layout.scss
+++ b/client/src/Sass/layout/_layout.scss
@@ -32,7 +32,7 @@
     @include small-font;
     cursor: pointer;
     @include breakpoint(md) {
-      height: 3.2rem;
+      height: 3rem;
       width: 10rem;
     }
     &:hover {
@@ -61,6 +61,13 @@
       background-color: $dark-alt;
     }
   }
+}
+
+// Button group
+.button__group {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
 }
 
 // Dashboard Button
@@ -250,3 +257,43 @@
   // margin-top: $x-0-25;
   @include smallest-font;
 }
+
+// Errors
+.errors {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  background-color: $white-alt;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .errors__container {
+    text-align: center;
+    .errors__warning {
+      @include big-font;
+      color: $dark-alt;
+    }
+    .errors__title {
+      color: $dark-alt;
+      @include h3-font;
+    }
+    .errors__link {
+      color: $cyan;
+      @include h4-font;
+      font-weight: $semi-bold;
+      margin-top: $x-0-5;
+      display: inline-block;
+    }
+  }
+}
+
+// Custom Alert
+// .custom__alert {
+//   position: absolute;
+//   width: 100%;
+//   top: -4rem;
+//   left: 0;
+// }
