category functionality added

--- a/client/src/Dashboard/DashboardStyles/_addProductForm.scss
+++ b/client/src/Dashboard/DashboardStyles/_addProductForm.scss
@@ -16,6 +16,7 @@
       margin-bottom: $x-0-75;
     }
     .addProducts__btn {
+      margin-top: $x-1-5;
       .MuiButton-root {
         width: 100% !important;
       }
