--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -17,6 +17,7 @@
 @import "components/customBreadcrumbs";
 @import "components/profileInfo";
 @import "components/userAvatar";
+@import "components/imageHandler";
 
 // Pages
 @import "pages/login&signup";
