--- a/client/src/Sass/layout/_layout.scss
+++ b/client/src/Sass/layout/_layout.scss
@@ -297,3 +297,16 @@
 //   top: -4rem;
 //   left: 0;
 // }
+
+// Custom Loader
+.customLoader {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: $white-alt;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
