--- a/client/src/Dashboard/DashboardStyles/_customTable.scss
+++ b/client/src/Dashboard/DashboardStyles/_customTable.scss
@@ -1,7 +1,8 @@
 .customTable {
+  overflow-x: scroll;
   table {
     border-collapse: separate;
-    border-spacing: 0 0.5rem;
+    border-spacing: 0 0.7rem;
     width: 100%;
   }
 
@@ -11,9 +12,21 @@
       border-radius: 8px;
       th {
         text-align: left;
-        padding: 8px 12px;
+        padding: $x-0-5 $x-1;
         color: $dark-alt;
         @include small-font;
+        text-transform: uppercase;
+        &:last-child {
+          text-align: center;
+        }
+        .th__header {
+          display: flex;
+          align-items: center;
+          .MuiSvgIcon-root {
+            @include h2-font;
+            margin-top: 0.5rem;
+          }
+        }
       }
     }
   }
@@ -27,10 +40,13 @@
       }
       td {
         text-align: left;
-        padding: 12px 12px;
-        font-weight: $medium;
+        padding: $x-0-5 $x-1;
+        font-weight: $semi-bold;
         color: $dark-alt;
         @include smaller-font;
+        &:last-child {
+          // text-align: center;
+        }
       }
     }
   }
