--- a/client/src/Dashboard/DashboardStyles/_customTable.scss
+++ b/client/src/Dashboard/DashboardStyles/_customTable.scss
@@ -1,8 +1,8 @@
 .customTable {
-  overflow-x: scroll;
+  // overflow-x: scroll;
   table {
     border-collapse: separate;
-    border-spacing: 0 0.7rem;
+    border-spacing: 0 $x-0-75;
     width: 100%;
   }
 
@@ -44,10 +44,17 @@
         font-weight: $semi-bold;
         color: $dark-alt;
         @include smaller-font;
-        &:last-child {
-          // text-align: center;
-        }
       }
+    }
+  }
+  .customTable__pagination {
+    margin-top: $x-0-5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .pagination__text {
+      color: $dark-alt;
+      @include small-font;
     }
   }
 }
