--- a/client/src/Sass/config/_variables.scss
+++ b/client/src/Sass/config/_variables.scss
@@ -1,6 +1,6 @@
 /*********** Google Font ***/
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
-@import "../mixins/breakpoints";
+@import "breakpoints";
 /*********** Sass Variables ***/
 /******* Colors ***/
 $dark-500: gray;
