--- a/client/src/ReactTable/_customTable.scss
+++ b/client/src/ReactTable/_customTable.scss
@@ -44,6 +44,7 @@
         font-weight: $semi-bold;
         color: $dark-alt;
         @include smaller-font;
+        white-space: nowrap;
       }
     }
   }
