--- a/client/src/Dashboard/DashboardStyles/_dashboardUsers.scss
+++ b/client/src/Dashboard/DashboardStyles/_dashboardUsers.scss
@@ -1,9 +1,9 @@
-.dc__section {
+.user__section {
   background-color: $cyan-alt;
   padding: $x-1;
   position: relative;
-  .dc__container {
-    .dc__header {
+  .user__container {
+    .user__header {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -13,11 +13,11 @@
         @include small-font;
       }
     }
-    .dc__categories {
+    .user__users {
       overflow-x: auto;
     }
   }
-  .dc__modal {
+  .user__modal {
     .MuiModal-root {
       z-index: 999 !important;
     }
