--- a/client/src/Dashboard/DashboardStyles/dashboardIndex.scss
+++ b/client/src/Dashboard/DashboardStyles/dashboardIndex.scss
@@ -5,4 +5,5 @@
 @import "dashboardProducts";
 @import "dashboardCategories";
 @import "addProductForm";
-@import "customTable";
+@import "dashboardUsers";
+@import "../../ReactTable/customTable";
