--- a/client/src/Sass/components/_scroll.scss
+++ b/client/src/Sass/components/_scroll.scss
@@ -1,6 +1,7 @@
 ::-webkit-scrollbar {
   background: transparent;
   width: 0.5rem;
+  height: 0.5rem;
   &-thumb {
     background: rgb(63, 78, 78);
     border-radius: 0.5rem;
