--- a/client/src/Sass/config/_layout.scss
+++ b/client/src/Sass/config/_layout.scss
@@ -40,6 +40,24 @@
     }
   }
 }
+.small__btn {
+  .MuiButton-root {
+    height: 2.3rem;
+    width: 7.8rem;
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+    @include smaller-font;
+    @include breakpoint(md) {
+      height: 2.6rem;
+      width: 8.5rem;
+      @include smallest-font;
+    }
+    .MuiSvgIcon-root {
+      @include h3-font;
+    }
+  }
+}
 // White Button
 .btn__white {
   .MuiButton-root {
@@ -227,6 +245,13 @@
   }
 }
 
+// Form checkbox label
+.checkbox__label {
+  color: $dark-alt;
+  font-weight: $medium;
+  @include smallest-font;
+}
+
 // From Dropdown
 .form__dropdown {
   @extend .form__control;
@@ -301,12 +326,20 @@
 // Custom Loader
 .customLoader {
   position: fixed;
-  height: 100vh;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background-color: $white-alt;
+  height: calc(100% - 4rem);
+  width: calc(100% - 12rem);
+  right: 0;
+  // left: 0;
+  bottom: 0;
+  // background-color: $white-alt;
+  // background-color: gray;
+
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 9999;
+}
+
+.MuiTypography-root {
+  line-height: 1 !important;
 }
