--- a/client/src/Sass/components/_category.scss
+++ b/client/src/Sass/components/_category.scss
@@ -1,3 +1,35 @@
 .category__section {
   background-color: $white;
+  // background: skyblue;
+  .category__content {
+    display: grid;
+    place-items: center;
+    .category__data {
+      margin-top: $x-3;
+      display: grid;
+      gap: 1rem;
+      // justify-items: center;
+      // align-items: center;
+      // @include breakpoint(sm) {
+      //   grid-template-columns: repeat(2, 1fr);
+      // }
+      // @include breakpoint(md) {
+      //   grid-template-columns: repeat(3, 1fr);
+      // }
+      // @include breakpoint(lg) {
+      //   grid-template-columns: repeat(3, 1fr);
+      // }
+      @include breakpoint(xl) {
+        grid-template-columns: repeat(4, 1fr);
+      }
+      .MuiSkeleton-root {
+        width: 300px !important;
+        height: 240px !important;
+        @include breakpoint(md) {
+          width: 260px !important;
+          height: 200px !important;
+        }
+      }
+    }
+  }
 }
