--- a/client/src/Sass/components/_products.scss
+++ b/client/src/Sass/components/_products.scss
@@ -1,3 +1,41 @@
 .products__section {
   background-color: $white;
+  .products__content {
+    display: grid;
+    place-items: center;
+    @include breakpoint(md) {
+      place-items: initial;
+    }
+    .products__data {
+      margin-top: $x-2;
+      display: grid;
+      gap: 1rem;
+      @include breakpoint(sm) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @include breakpoint(md) {
+        grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+      }
+      .products__loader {
+        width: 280px;
+        height: 350px;
+        @include breakpoint(sm) {
+          width: 260px;
+        }
+        @include breakpoint(md) {
+          width: 100%;
+        }
+      }
+      .MuiSkeleton-root {
+        // width: 280px !important;
+        // height: 280px !important;
+        @include breakpoint(sm) {
+          // width: 260px !important;
+        }
+        @include breakpoint(md) {
+          // width: 100% !important;
+        }
+      }
+    }
+  }
 }
