load more functionality and product details added

--- a/client/src/Sass/config/_base.scss
+++ b/client/src/Sass/config/_base.scss
@@ -40,6 +40,10 @@ select {
   outline: none;
   font-family: $poppins;
 }
+button:disabled {
+  pointer-events: auto !important;
+  cursor: not-allowed !important;
+}
 img {
   max-width: 100%;
   height: auto;
