--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -18,6 +18,8 @@
 @import "components/imageHandler";
 @import "components/login&signup";
 @import "components/profile";
+@import "components/productItem";
+@import "components/product";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
