--- a/client/src/Sass/components/_products.scss
+++ b/client/src/Sass/components/_products.scss
@@ -9,7 +9,8 @@
     .products__data {
       margin-top: $x-2;
       display: grid;
-      gap: 1rem;
+      column-gap: 1rem;
+      row-gap: 2rem;
       @include breakpoint(sm) {
         grid-template-columns: repeat(2, 1fr);
       }
@@ -18,7 +19,6 @@
       }
       .products__loader {
         width: 280px;
-        height: 350px;
         @include breakpoint(sm) {
           width: 260px;
         }
@@ -26,14 +26,13 @@
           width: 100%;
         }
       }
-      .MuiSkeleton-root {
-        // width: 280px !important;
-        // height: 280px !important;
-        @include breakpoint(sm) {
-          // width: 260px !important;
-        }
-        @include breakpoint(md) {
-          // width: 100% !important;
+    }
+    .product__btn {
+      margin: $x-2-5 auto auto;
+      .MuiButton-root {
+        gap: 0.5rem;
+        .MuiSvgIcon-root {
+          @include h3-font;
         }
       }
     }
