--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -20,6 +20,7 @@
 @import "components/profile";
 @import "components/productItem";
 @import "components/product";
+@import "components/reviewForm";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
