--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -20,7 +20,9 @@
 @import "components/profile";
 @import "components/productItem";
 @import "components/product";
+@import "components/productReview";
 @import "components/reviewForm";
+@import "components/reviewGraph";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
