--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -23,6 +23,7 @@
 @import "components/productReview";
 @import "components/reviewForm";
 @import "components/reviewGraph";
+@import "components/reviewComment";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
