--- a/client/src/Sass/components/_product.scss
+++ b/client/src/Sass/components/_product.scss
@@ -1,39 +1,39 @@
 .product__section {
   .product__content {
     display: grid;
-    gap: 2rem;
-    max-width: 350px;
+    gap: 3.5rem;
+    max-width: 400px;
     margin: 0 auto;
+    padding: $x-1 0;
     @include breakpoint(sm) {
-      max-width: 400px;
+      max-width: 450px;
     }
     @include breakpoint(md) {
       max-width: initial;
       grid-template-columns: repeat(2, 1fr);
+      gap: 2.5rem;
     }
     @include breakpoint(xl) {
       max-width: 90%;
     }
     .product__image {
-      max-width: 400px;
-      //   margin: 0 auto;
-      @include shadow-btn;
-      background: rgba(128, 128, 128, 0.301);
-      height: 400px;
+      max-width: 450px;
+      img {
+        @include box-shadow;
+      }
     }
     .product__details {
       display: flex;
       flex-direction: column;
-      gap: 0.2rem;
       .product__rating {
         display: flex;
         align-items: center;
-        gap: 1rem;
+        gap: 0.5rem;
         .product__review--text {
           font-weight: $semi-bold;
           color: $dark-alt;
           @include small-font;
-          margin-top: -0.2rem;
+          margin-top: -0.4rem;
           opacity: 0.8;
         }
       }
@@ -51,6 +51,7 @@
         color: $dark-alt;
         @include small-font;
         opacity: 0.8;
+        margin: $x-0-5 0;
       }
       .product__category {
         color: $dark-alt;
@@ -58,10 +59,24 @@
         font-weight: $semi-bold;
         .product__category--link {
           color: $cyan;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
+
+      .product__countInStock {
+        color: $dark-alt;
+        opacity: 0.8;
+        @include smallest-font;
+        font-weight: $semi-bold;
+        display: block;
+        margin-top: $x-1;
+        margin-bottom: $x-0-25;
+      }
+
       .product__count {
-        margin: $x-1 0;
+        margin-bottom: $x-1-25;
         display: flex;
         align-items: center;
         border: $border-gray;
@@ -107,12 +122,12 @@
   }
 
   .product__tab {
-    max-width: 350px;
+    max-width: 400px;
     margin: 0 auto;
     margin-top: $x-3;
 
     @include breakpoint(sm) {
-      max-width: 400px;
+      max-width: 450px;
     }
     @include breakpoint(md) {
       max-width: initial;
@@ -138,7 +153,7 @@
     }
 
     .MuiBox-root .css-19kzrtu {
-      padding: $x-1-75 0 $x-2-75 !important;
+      padding: $x-1-75 0 !important;
     }
 
     .product__description {
