--- a/client/src/Sass/config/_mixins.scss
+++ b/client/src/Sass/config/_mixins.scss
@@ -126,9 +126,9 @@
 
 // box shadow
 @mixin box-shadow() {
-  box-shadow: 0px 25px 400px -20px $gray;
-  -webkit-box-shadow: 0px 25px 400px -20px $gray;
-  -moz-box-shadow: 0px 25px 400px -20px $gray;
+  box-shadow: -19px 27px 60px -12px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: -19px 27px 60px -12px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: -19px 27px 60px -12px rgba(0, 0, 0, 0.4);
 }
 
 // transition
