--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -24,6 +24,8 @@
 @import "components/reviewForm";
 @import "components/reviewGraph";
 @import "components/reviewComment";
+@import "components/cart";
+@import "components/cartItem";
 
 // Dashboard
 @import "../Dashboard/DashboardStyles/dashboardIndex";
