--- a/client/src/Dashboard/DashboardStyles/_dashboardCategories.scss
+++ b/client/src/Dashboard/DashboardStyles/_dashboardCategories.scss
@@ -1,6 +1,6 @@
 .dc__section {
-  background-color: $cyan-alt;
-  padding: $x-1;
+  // background-color: $cyan-alt;
+  // padding: $x-1;
   position: relative;
   .dc__container {
     .dc__header {
@@ -14,9 +14,15 @@
       }
     }
     .dc__categories {
+      margin-top: $x-0-25;
       overflow-x: auto;
     }
   }
+
+  .custom__alert {
+    margin: $x-1 0;
+  }
+
   .dc__modal {
     .MuiModal-root {
       z-index: 999 !important;
